WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140564
[Mac] Correct infinite loop in Wheel Handler code in EventHandlerMac
https://bugs.webkit.org/show_bug.cgi?id=140564
Summary
[Mac] Correct infinite loop in Wheel Handler code in EventHandlerMac
Brent Fulgham
Reported
2015-01-16 14:17:28 PST
A bug was introduced in
Bug 139914
due to a typo when converting the while() loop in the patch to a for() loop.
Attachments
Patch
(1.37 KB, patch)
2015-01-16 17:31 PST
,
Brent Fulgham
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2015-01-16 14:18:07 PST
<
rdar://problem/19386426
>
Brent Fulgham
Comment 2
2015-01-16 17:25:16 PST
Index: mac/EventHandlerMac.mm =================================================================== --- mac/EventHandlerMac.mm (revision 178590) +++ mac/EventHandlerMac.mm (working copy) @@ -834,7 +834,7 @@ if (&frame == latchedState->frame()) return false; - for (Frame* ancestor = frame.tree().parent(); ancestor; ancestor->tree().parent()) { + for (Frame* ancestor = frame.tree().parent(); ancestor; ancestor = ancestor->tree().parent()) { if (ancestor == latchedState->frame()) return true; }
Brent Fulgham
Comment 3
2015-01-16 17:31:50 PST
Created
attachment 244823
[details]
Patch
Brent Fulgham
Comment 4
2015-01-16 17:49:48 PST
Committed
r178617
: <
http://trac.webkit.org/changeset/178617
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug