[Mac] Correct infinite loop in Wheel Handler code in EventHandlerMac https://bugs.webkit.org/show_bug.cgi?id=140564 <rdar://problem/19386426.

Reviewed by Dean Jackson.

* page/mac/EventHandlerMac.mm:
(WebCore::latchingIsLockedToAncestorOfThisFrame): Put missing assignment
back into the loop!


Canonical link: https://commits.webkit.org/158550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178617 268f45cc-cd09-0410-ab3c-d52691b4dbfc